--- a/back-ends/CMakeLists.txt
+++ b/back-ends/CMakeLists.txt
@@ -1,15 +1,11 @@
-# SUBDIRS=dlfcn sfst
-# if ! WANT_OPENFST_UPSTREAM
-# SUBDIRS += openfst openfstwin
-# endif
-# if ! WANT_FOMA_UPSTREAM
-# SUBDIRS += foma
-# endif
-
-# add_subdirectory(dlfcn)
-add_subdirectory(openfst)
+if(HAVE_OPENFST)
+    add_subdirectory(openfst)
+endif()
 
 if(HAVE_SFST)
     add_subdirectory(sfst)
 endif()
-add_subdirectory(foma)
+
+if(HAVE_FOMA)
+    add_subdirectory(foma)
+endif()
