--- a/libhfst/src/CMakeLists.txt
+++ b/libhfst/src/CMakeLists.txt
@@ -1,6 +1,3 @@
-# file(GLOB_RECURSE SOURCES "*.cc")
-# file(GLOB_RECURSE INCLUDES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
-
 target_compile_options(hfst PRIVATE
     "-Wno-deprecated" "-Wall" "-Wextra"
     "-Wno-unused-parameter" "-Wno-sign-compare" "-g"
@@ -8,21 +5,13 @@ target_compile_options(hfst PRIVATE
     "-I${PROJECT_SOURCE_DIR}/libhfst/src"
     "-I${PROJECT_SOURCE_DIR}/back-ends")
 
-# message(${INCLUDES})
-
-# message(${ICU_LIBRARIES})
-
 target_include_directories(hfst PUBLIC
     ${ICU_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR})
-    # "${CMAKE_SOURCE_DIR}/back-ends/foma"
-    # "${CMAKE_SOURCE_DIR}/back-ends/openfst/src/include")
 
 find_library(UC icuuc)
 find_library(I18N icui18n)
 find_library(DATA icudata)
-# target_include_directories(hfst PRIVATE ${INCLUDES})
-# target_sources(hfst PRIVATE ${SOURCES})
 
 add_subdirectory(parsers)
 add_subdirectory(implementations)
@@ -41,6 +30,11 @@ target_link_libraries(hfst PRIVATE ${UC} ${I18N} ${DATA} parsers)
 if(HAVE_SFST)
     target_link_libraries(hfst PUBLIC sfst)
 endif()
-target_link_libraries(hfst PUBLIC openfst foma)
+if(HAVE_OPENFST)
+    target_link_libraries(hfst PUBLIC openfst)
+endif()
+if(HAVE_FOMA)
+    target_link_libraries(hfst PUBLIC foma)
+endif()
 target_compile_options(hfst PUBLIC ${ICU_CFLAGS_OTHER})
 
