--- a/libhfst/src/implementations/CMakeLists.txt
+++ b/libhfst/src/implementations/CMakeLists.txt
@@ -7,27 +7,41 @@ if(HAVE_SFST)
     )
 endif()
 
+if(HAVE_OPENFST)
+    target_sources(hfst PRIVATE
+        TropicalWeightTransducer.cc
+        LogWeightTransducer.cc
+        ConvertTropicalWeightTransducer.cc 
+        ConvertLogWeightTransducer.cc 
+        optimized-lookup/convert.cc 
+    )
+endif()
+
+if(HAVE_FOMA)
+    target_sources(hfst PRIVATE
+        FomaTransducer.cc
+        ConvertFomaTransducer.cc 
+    )
+endif()
+
 target_sources(hfst PRIVATE
     # SfstTransducer.cc
-    TropicalWeightTransducer.cc
-    LogWeightTransducer.cc
-    FomaTransducer.cc
     # XfsmTransducer.cc
     # OtherSymbolTransducer.cc
     HfstOlTransducer.cc
     ConvertTransducerFormat.cc 
+    HfstBasicTransition.cc
+    HfstBasicTransducer.cc 
+    ConvertOlTransducer.cc
+    ConvertXfsmTransducer.cc 
     HfstTropicalTransducerTransitionData.cc 
-    HfstBasicTransition.cc HfstBasicTransducer.cc 
-    ConvertTropicalWeightTransducer.cc 
-    ConvertLogWeightTransducer.cc ConvertFomaTransducer.cc 
-    ConvertOlTransducer.cc ConvertXfsmTransducer.cc 
             compose_intersect/ComposeIntersectRulePair.cc 
             compose_intersect/ComposeIntersectLexicon.cc 
             compose_intersect/ComposeIntersectRule.cc 
             compose_intersect/ComposeIntersectFst.cc 
             compose_intersect/ComposeIntersectUtilities.cc
     optimized-lookup/transducer.cc 
-    optimized-lookup/convert.cc 
-    optimized-lookup/ospell.cc optimized-lookup/pmatch.cc 
+    optimized-lookup/ospell.cc
+    optimized-lookup/pmatch.cc 
     optimized-lookup/pmatch_tokenize.cc 
     optimized-lookup/find_epsilon_loops.cc)
