--- a/back-ends/CMakeLists.txt
+++ b/back-ends/CMakeLists.txt
@@ -1,5 +1,16 @@
+
+if(NOT HAVE_DLFCN_H)
+  add_subdirectory(dlfcn)
+  include_directories("${CMAKE_SOURCE_DIR}/back-ends/dlfcn")
+endif()
+
 if(HAVE_OPENFST)
     add_subdirectory(openfst)
+    if(WIN32)
+        add_subdirectory(openfst)
+    else()
+        add_subdirectory(openfstwin)
+    endif()
 endif()
 
 if(HAVE_SFST)
