Foma on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,11 @@ if(APPLE)
 endif()
 
 if(WIN32)
+    find_package(dlfcn-win32 REQUIRED)
     set(YY_NO_UNISTD_H " ")
     find_package(ICU)
-    set(CMAKE_CXX_FLAGS "/DWINDOWS /DHFSTEXPORT /DHAVE_CONFIG_H /I${CMAKE_CURRENT_SOURCE_DIR} /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /std:c++14 ${CMAKE_CXX_FLAGS}")
-    set(CMAKE_C_FLAGS "/DWINDOWS /DHFSTEXPORT /DHAVE_CONFIG_H /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "/std:c++14 /DWINDOWS /DHFSTEXPORT /DHAVE_CONFIG_H /I${CMAKE_CURRENT_SOURCE_DIR} /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_C_FLAGS "/std:c11 /DWINDOWS /DHFSTEXPORT /DHAVE_CONFIG_H /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C_FLAGS}")
 else()
     find_package(PkgConfig)
     include_directories(ICU_INCLUDE_DIRS)
@@ -30,7 +31,8 @@ find_package(BISON 3.0 REQUIRED)
 
 check_include_file_cxx("backward/hash_map" HAVE_BACKWARD_HASH_MAP)
 check_include_file_cxx("backward/hash_set" HAVE_BACKWARD_HASH_SET)
-check_include_file("dlfcn.h" HAVE_DLFCN_H)
+#check_include_file("dlfcn.h" HAVE_DLFCN_H)
+set(HAVE_DLFCN_H " ")
 check_function_exists("error" HAVE_ERROR)
 check_function_exists("error_at_line" HAVE_ERROR_AT_LINE)
 check_include_file("error.h" HAVE_ERROR_H)
@@ -111,7 +113,7 @@ set(USE_ICU_UNICODE 1)
 set(YYTEXT_POINTER 1)
 
 # set(HAVE_SFST " ")
-# set(HAVE_FOMA " ")
+set(HAVE_FOMA " ")
 # set(HAVE_OPENFST " ")
 # set(HAVE_OPENFST_LOG " ")
 set(HAVE_HFSTOL " ")
