--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ if(WIN32)
     find_package(dlfcn-win32 REQUIRED)
     set(YY_NO_UNISTD_H " ")
     find_package(ICU)
-    set(CMAKE_CXX_FLAGS "/std:c++14 /DWINDOWS /DHFSTEXPORT /DHAVE_CONFIG_H /I${CMAKE_CURRENT_SOURCE_DIR} /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS ${CMAKE_CXX_FLAGS}")
-    set(CMAKE_C_FLAGS "/std:c11 /DWINDOWS /DHFSTEXPORT /DHAVE_CONFIG_H /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "/std:c++14 /bigobj /DWINDOWS /DHFSTEXPORT /DOPENFSTEXPORT /DHAVE_CONFIG_H /I${CMAKE_CURRENT_SOURCE_DIR} /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_C_FLAGS "/std:c11 /bigobj /DWINDOWS /DHFSTEXPORT /DOPENFSTEXPORT /DHAVE_CONFIG_H /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C_FLAGS}")
 else()
     find_package(PkgConfig)
     include_directories(ICU_INCLUDE_DIRS)
@@ -114,8 +114,8 @@ set(YYTEXT_POINTER 1)
 
 # set(HAVE_SFST " ")
 set(HAVE_FOMA " ")
-# set(HAVE_OPENFST " ")
-# set(HAVE_OPENFST_LOG " ")
+set(HAVE_OPENFST " ")
+set(HAVE_OPENFST_LOG " ")
 set(HAVE_HFSTOL " ")
 
 configure_file(config.h.in config.h)
