--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ check_function_exists("strndup" HAVE_STRNDUP)
 check_function_exists("strtod" HAVE_STRTOD)
 check_function_exists("strtol" HAVE_STRTOL)
 check_function_exists("strtoul" HAVE_STRTOUL)
-check_function_exists("xstrdup" XSTRDUP)
+check_function_exists("xstrdup" HAVE_XSTRDUP)
 check_function_exists("sys/stat.h" HAVE_SYS_STAT_H)
 check_function_exists("sys/types.h" HAVE_SYS_TYPES_H)
 check_function_exists("unistd.h" HAVE_UNISTD_H)
