--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,14 +16,14 @@ if(WIN32)
     find_package(dlfcn-win32 REQUIRED)
     set(YY_NO_UNISTD_H " ")
     find_package(ICU)
-    set(CMAKE_CXX_FLAGS "/std:c++14 /bigobj /DWINDOWS /DHFSTEXPORT /DOPENFSTEXPORT /DHAVE_CONFIG_H /I${CMAKE_CURRENT_SOURCE_DIR} /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS ${CMAKE_CXX_FLAGS}")
-    set(CMAKE_C_FLAGS "/std:c11 /bigobj /DWINDOWS /DHFSTEXPORT /DOPENFSTEXPORT /DHAVE_CONFIG_H /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "/std:c++14 /bigobj /DWINDOWS /DHFSTEXPORT /DOPENFSTEXPORT /DHAVE_CONFIG_H /I${CMAKE_SOURCE_DIR} /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_C_FLAGS "/std:c11 /bigobj /DWINDOWS /DHFSTEXPORT /DOPENFSTEXPORT /DHAVE_CONFIG_H /D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS /I${CMAKE_SOURCE_DIR} ${CMAKE_C_FLAGS}")
 else()
     find_package(PkgConfig)
     include_directories(ICU_INCLUDE_DIRS)
     pkg_check_modules(ICU icu-uc REQUIRED)
-    set(CMAKE_CXX_FLAGS "-std=c++14 -w -O2 -DHAVE_CONFIG_H -I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CXX_FLAGS}")
-    set(CMAKE_C_FLAGS "-w -O2 -DHAVE_CONFIG_H -I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "-std=c++14 -w -O2 -DHAVE_CONFIG_H -I${CMAKE_SOURCE_DIR} ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_C_FLAGS "-w -O2 -DHAVE_CONFIG_H -I${CMAKE_SOURCE_DIR} ${CMAKE_C_FLAGS}")
 endif()
 
 find_package(FLEX 2.6 REQUIRED)
